스포츠 진행중

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -321,79 +321,14 @@
                     </div>
                 </div>
             </div>
-            <div class="menu_wrap">
-                <div class="menu_list mt-1 bg-back rounded flex items-center justify-between">
-                    <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                        <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg>
-                        <span class="font-medium">스포츠</span>
-                    </a>
-                    <i class="flex items-center h-full px-3 cursor-pointer"><svg class="w-4 h-4 fill-basic "><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></i>
-                </div>
-                <div class="hidden menu_depth p-2">
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_LiveEvents"></use></svg>
-                            <span class="font-medium">라이브 이벤트</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Soccer"></use></svg>
-                            <span class="font-medium">축구</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Tennis"></use></svg>
-                            <span class="font-medium">테니스</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Basketball"></use></svg>
-                            <span class="font-medium">농구</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Cricket"></use></svg>
-                            <span class="font-medium">크리켓</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_FIFA"></use></svg>
-                            <span class="font-medium">피파</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_AmericanFootball"></use></svg>
-                            <span class="font-medium">미식축구</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_IceHockey"></use></svg>
-                            <span class="font-medium">아이스 하키</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Baseball"></use></svg>
-                            <span class="font-medium">야구</span>
-                        </a>
-                    </div>
-                    <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
-                            <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Handball"></use></svg>
-                            <span class="font-medium">핸드볼</span>
-                        </a>
-                    </div>
-                </div>
+            <div class="menu_list mt-1 bg-back rounded">
+                <a href="/bcGame/sports.html" class="flex items-center gap-5 h-full pl-4">
+                    <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg>
+                    <span class="font-medium">스포츠</span>
+                </a>
             </div>
             <div class="menu_list mt-1 bg-back rounded">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/racing.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic" version="1.1" xmlns="http://www.w3.org/2000/svg" width="30" height="32" viewBox="0 0 30 32"><path d="M23.707-0c-0.047 0-0.109 0-0.155 0.016-0.078 0.016-1.54 0.404-2.333 1.182s-1.213 1.804-1.369 2.582c-7.636 0.264-14.993 4.557-14.993 13.702 0 2.364 0.7 6.159 1.757 7.714 0 0 0.995 2.022 5.817 4.728 3.282 1.089 6.579 1.182 7.667 1.182 0.187 0 0.311 0 0.342 0 0.264 0 0.482-0.187 0.56-0.435 0.031-0.078 0.607-1.866 0.607-3.81 0-2.022-0.809-3.313-1.586-4.572-0.84-1.338-1.711-2.737-1.711-5.195 0-1.26 0.451-2.193 1.337-2.799 1.291 2.411 3.717 2.986 4.728 3.126 0.202 0.607 0.669 1.633 1.509 1.96 0.373 0.156 0.793 0.156 1.166 0 0.187 0.109 0.42 0.187 0.638 0.156 0.653-0.015 1.322-0.467 1.788-1.26 0.047-0.078 0.093-0.155 0.156-0.233 0.513-0.762 1.555-2.348-0.762-4.572-1.104-4.744-3.079-7.076-3.826-7.978l-0.093-0.14c-0.358-0.42-0.731-0.84-1.12-1.244l0.498-3.422c0.031-0.202-0.047-0.404-0.187-0.544-0.124-0.078-0.28-0.14-0.436-0.14zM19.415 0.124c-0.031 0-0.047 0.016-0.078 0.016-0.482 0.062-0.809 0.451-1.151 0.84-0.14 0.156-0.404 0.451-0.544 0.529-0.124-0.031-0.389-0.233-0.56-0.342-0.482-0.327-1.089-0.747-1.773-0.591-0.575 0.109-0.918 0.669-1.244 1.182-0.124 0.202-0.373 0.575-0.513 0.684-0.14-0.047-0.42-0.218-0.607-0.327-0.529-0.311-1.089-0.638-1.649-0.451-0.591 0.202-1.026 0.995-1.198 1.571-0.062 0.187-0.156 0.513-0.233 0.638-0.156-0.016-0.575-0.14-0.762-0.218-0.56-0.249-1.338-0.311-1.913-0.031-0.607 0.311-0.747 1.306-0.731 1.897 0 0.171 0 0.451-0.016 0.591s-0.062 0.171-0.109 0.202c-0.078 0.062-0.327 0.062-0.529 0.093-0.529 0.062-1.244-0.047-1.617 0.42-0.389 0.529-0.342 1.151-0.202 1.742 0.078 0.202 0.187 0.622 0.171 0.7-0.078 0.093-0.171 0.156-0.404 0.249-0.591 0.202-1.306 0.451-1.54 1.166-0.14 0.482-0.062 0.778 0.233 1.244 0.078 0.124 0.218 0.358 0.28 0.482-0.093 0.078-0.296 0.202-0.42 0.264-0.42 0.233-0.98 0.56-1.104 1.229-0.062 0.482 0.342 0.995 0.622 1.4 0.156 0.202 0.28 0.498 0.358 0.622-0.078 0.078-0.529 0.513-0.622 0.575-0.373 0.28-0.886 0.669-0.886 1.306 0 0.435 0.467 1.509 0.793 1.913 0.124 0.155-0.047 0.42-0.156 0.576-0.047 0.124-0.404 0.513-0.607 0.731-0.249 0.295-0.762 1.011-0.7 1.618 0.078 0.622 0.669 1.291 1.135 1.664 0.311 0.233 0.311 0.389 0.404 0.467 0.031 0.093 0.109 0.171 0.171 0.233 0.062 0.047 0.902 0.855 3.841 0.84-1.322-1.944-1.944-6.143-1.944-8.367 0-9.612 7.481-14.355 15.413-14.884 0.202-0.513 0.544-1.306 1.244-2.115-0.513-0.342-0.746-0.373-0.855-0.358zM25.496 1.182l-0.358 2.551c0.109 0.109 0.218 0.249 0.327 0.373 0.202-0.607 0.498-1.26 0.995-1.804 0.155-0.156 0.218-0.389 0.155-0.607s-0.249-0.373-0.467-0.435c-0.202-0.047-0.404-0.078-0.606-0.078h-0.047zM23.832 9.331c0.513 0 0.933 0.42 0.933 0.933s-0.42 0.933-0.933 0.933c-0.513 0-0.933-0.42-0.933-0.933s0.42-0.933 0.933-0.933z"></path></svg>
                     <span class="font-medium">레이싱</span>
                 </a>
@@ -413,7 +348,7 @@
             </div>
 
             <div class="menu_list mt-1 bg-back rounded">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/lottery.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Lottery"></use></svg>
                     <span class="font-medium">복권</span>
                 </a>
