--- a/_left_menu.html
+++ b/_left_menu.html
@@ -397,7 +397,7 @@
                 </div>
             </div>
             <div class="menu_list bg-back">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/affiliate_logout.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Affiliate"></use></svg>
                     <span class="font-medium">제휴</span>
                 </a>
@@ -409,7 +409,7 @@
                 </a>
             </div>
             <div class="menu_list bg-back">
-                <a href="/bcGame/casino/provably_fair.html" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/provably_fair.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_ProvablyFair"></use></svg>
                     <span class="font-medium">공정성</span>
                 </a>
