--- a/_top_bar.html
+++ b/_top_bar.html
@@ -9,9 +9,9 @@
                 <a href="/bcGame/index.html" class="top_logo"><img alt="logo" class="h-10" src="/bcGame/dist/custom_img/logo.webp"></a>
             </div>
             <a href="/bcGame/casino/index.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</a>
-            <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</button>
+            <a href="/bcGame/sports.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</a>
             <a href="/bcGame/racing.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</a>
-            <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic lottery_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Lottery"></use></svg> 복권</button>
+            <a href="/bcGame/lottery.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic lottery_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Lottery"></use></svg> 복권</a>
         </div>
         <div class="casino_search flex-1 mx-2 relative">
             <svg class="absolute left-3 top-3 w-4 h-4 fill-place"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Search"></use></svg>
