링크 마무리

--- a/casino/recent.html
+++ b/casino/recent.html
@@ -203,6 +203,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .casino').addClass('active');
+            $('#top_casino').addClass('active');
         })
     </script>
 
