--- a/lottery.html
+++ b/lottery.html
@@ -1066,6 +1066,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .rotto').addClass('active');
+            $('#top_lottery').addClass('active');
         })
         $('.lottery_top_btn button').on('click',function(){
             if($(this).hasClass('search_btn')){
