--- a/racing_detail.html
+++ b/racing_detail.html
@@ -1272,6 +1272,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .racing').addClass('active');
+            $('#top_racing').addClass('active');
         })
         $('.bookmark_btn').on('click',function(){
             $(this).toggleClass('on')
