--- a/sports.html
+++ b/sports.html
@@ -1837,7 +1837,8 @@
 
     <script>
         $(window).on('load',function(){
-            $('.mo_top_menu .racing').addClass('active');
+            $('.mo_top_menu .sports').addClass('active');
+            $('#top_sports').addClass('active');
         })
        
         $('.sports_like_btn').on('click',function(){
