--- a/casino/hot.html
+++ b/casino/hot.html
@@ -762,6 +762,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .casino').addClass('active');
+            $('#top_casino').addClass('active');
         })
     </script>
 
