--- a/casino/index.html
+++ b/casino/index.html
@@ -8229,6 +8229,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .casino').addClass('active');
+            $('#top_casino').addClass('active');
         })
     </script>
 
