--- a/lottery_favorite.html
+++ b/lottery_favorite.html
@@ -466,6 +466,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .rotto').addClass('active');
+            $('#top_lottery').addClass('active');
         })
         $('.lottery_top_btn button').on('click',function(){
             if($(this).hasClass('search_btn')){
