--- a/racing.html
+++ b/racing.html
@@ -2354,6 +2354,7 @@
     <script>
         $(window).on('load',function(){
             $('.mo_top_menu .racing').addClass('active');
+            $('#top_racing').addClass('active');
         })
         $('.option_btn').on('click',function(){
             $(this).find('svg').toggleClass('-rotate-90')
