스포츠,레이싱 마무리

--- a/racing.html
+++ b/racing.html
@@ -2204,7 +2204,7 @@
                         <div class="bg-stand mb-4">
                             <div class="flex items-center justify-between p-3 px-4 border-b border-primary">
                                 <p class="text-tit">베팅 슬립</p>
-                                <a href="javascript:;" class="btn-normal text-xs p-2 px-3">내역</a>
+                                <a href="/bcGame/racing_bet.html" class="btn-normal text-xs p-2 px-3">내역</a>
                             </div>
                             <div class="p-5 px-4 text-xs">베팅 슬립이 비어 있습니다.</div>
                         </div>
@@ -2213,7 +2213,7 @@
                         <div class="bg-stand">
                             <div class="flex items-center justify-between p-3 px-4 border-b border-primary">
                                 <p class="text-tit">베팅 슬립 (2)</p>
-                                <a href="javascript:;" class="btn-normal text-xs p-2 px-3">내역</a>
+                                <a href="/bcGame/racing_bet.html" class="btn-normal text-xs p-2 px-3">내역</a>
                             </div>
                             <div>
                                 <div class="border-b border-slate-300 p-4">
