--- a/sports.html
+++ b/sports.html
@@ -259,7 +259,7 @@
                     </div>
 
                     <!-- 중앙 -->
-                    <div class="sports_center h-full scrollbar overflow-y-auto type02 py-4 md:px-2 bg-stand">
+                    <div class="sports_center h-full scrollbar overflow-y-auto type02 py-4 md:px-2 dark:bg-stand bg-shadow">
                         <!-- MO -->
                         <div class="md:hidden block mb-2 px-2">
                             <div class="relative w-full">
@@ -592,9 +592,9 @@
                                     <div class="w-12 text-center">Extras</div>
                                 </div>
 
-                                <div class="flex items-center justify-between bg-backlight hover:bg-[#354036] rounded">
+                                <div class="flex items-center justify-between bg-backlight hover:bg-[#688960] dark:hover:bg-[#354036] !bg-opacity-50 dark:!bg-opacity-100 rounded">
                                     <div class="w-48 flex items-center justify-between bet_info">
-                                        <div class="p-2">
+                                        <div class="p-2 cursor-pointer" onclick="window.location.href='/bcGame/sports_detail.html'">
                                             <div class="flex items-center gap-1 mb-1">
                                                 <span class="mr-1 text-tit">05:00</span>
                                                 ID 5438849
@@ -676,9 +676,9 @@
                                     </div>
                                 </div>
 
-                                <div class="flex items-center justify-between mt-1 bg-backlight hover:bg-[#354036] rounded">
+                                <div class="flex items-center justify-between mt-1 bg-backlight hover:bg-[#688960] dark:hover:bg-[#354036] !bg-opacity-50 dark:!bg-opacity-100 rounded">
                                     <div class="w-48 flex items-center justify-between bet_info">
-                                        <div class="p-2">
+                                        <div class="p-2 cursor-pointer" onclick="window.location.href='/bcGame/sports_detail.html'">
                                             <div class="flex items-center gap-1 mb-1">
                                                 <span class="mr-1 text-tit">05:00</span>
                                                 ID 5438849
@@ -761,7 +761,7 @@
                                 </div>
 
                                 <!-- 중간 케이스 -->
-                                <div class="my-2 bg-backlight hover:bg-[#354036]">
+                                <div class="my-2 bg-backlight hover:bg-[#688960] dark:hover:bg-[#354036] !bg-opacity-50 dark:!bg-opacity-100">
                                     <div class="flex items-center bet_case01_top">
                                         <button class="sports_like_btn shrink-0 bet_like_btn h-full px-2"style="height:78px">
                                             <img class="w-4 h-4" src="/bcGame/dist/custom_img/lottery/like.svg" alt="">
@@ -838,9 +838,9 @@
                                     <div class="w-12 text-center">Extras</div>
                                 </div>
 
-                                <div class="flex items-center justify-between bg-backlight hover:bg-[#354036] rounded">
+                                <div class="flex items-center justify-between bg-backlight hover:bg-[#688960] dark:hover:bg-[#354036] !bg-opacity-50 dark:!bg-opacity-100 rounded">
                                     <div class="w-48 flex items-center justify-between bet_info">
-                                        <div class="p-2">
+                                        <div class="p-2 cursor-pointer" onclick="window.location.href='/bcGame/sports_detail.html'">
                                             <div class="flex items-center gap-1 mb-1">
                                                 <span class="mr-1 text-tit">05:00</span>
                                                 ID 5438849
@@ -922,9 +922,9 @@
                                     </div>
                                 </div>
 
-                                <div class="flex items-center justify-between mt-1 bg-backlight hover:bg-[#354036] rounded">
+                                <div class="flex items-center justify-between mt-1 bg-backlight hover:bg-[#688960] dark:hover:bg-[#354036] !bg-opacity-50 dark:!bg-opacity-100 rounded">
                                     <div class="w-48 flex items-center justify-between bet_info">
-                                        <div class="p-2">
+                                        <div class="p-2 cursor-pointer" onclick="window.location.href='/bcGame/sports_detail.html'">
                                             <div class="flex items-center gap-1 mb-1">
                                                 <span class="mr-1 text-tit">05:00</span>
                                                 ID 5438849
@@ -1675,7 +1675,7 @@
                                         </div>
                                     </div>
                                     <div class="w-1/2 p-2">
-                                        <button class="flex items-center gap-1 text-xs">
+                                        <button class="flex items-center gap-1 text-xs" data-tw-toggle="modal" data-tw-target="#odd_setting-modal">
                                             <svg width="24" height="24"><use href="/bcGame/dist/custom_img/sports-defs.svg#settings"></use></svg>
                                             <span>Odds settings</span>
                                         </button>
@@ -1776,7 +1776,7 @@
                                 </div>
                                 <div class="px-4 py-6 text-center">You have no bets yet</div>
                                 <div class="p-4">
-                                    <button class="btn-green w-full py-2 font-bold">BET HISTORY</button>
+                                    <a href="/bcGame/sports_bet.html" class="btn-green w-full py-2 font-bold">BET HISTORY</a>
                                 </div>
                             </div>
                             <div id="betslip-tab-3" class="tab-pane leading-relaxed" role="tabpanel" aria-labelledby="betslip-3-tab">
@@ -1811,7 +1811,7 @@
         <!--  ** 메인 보드 끝 ** -->
 
         <!--  ** 오른쪽 보드 시작 ** -->
-        <div class="right-sidebar "></div>
+        <div class="right-sidebar"></div>
         <!--  ** 오른쪽 보드 끝 ** -->
 
 
@@ -1821,6 +1821,72 @@
 
 
         <!--  ** 모달영역 시작 ** -->
+
+        <!-- ODDS SETTINGS -->
+        <div id="odd_setting-modal" class="modal mo_full" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body bg-modaldark relative rounded">
+                        <div class="relative flex items-center justify-between p-4">
+                            <p class="text-tit font-extrabold text-base">ODDS SETTINGS</p>
+                            
+                            <button class="basic-hover" data-tw-dismiss="modal"><svg class="w-4 h-4 close_btn cursor-pointer hover:-rotate-90 duration-500 transition-all"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Close"></use></svg></button>
+                        </div>
+
+                        <div class="p-5 text-xs font-bold">
+                            <div class="grid grid-cols-2">
+                                <div>
+                                    <p class="font-bold">ODDS TYPE</p>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-1" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-chris-evans"> 
+                                        <label class="form-check-label text-tit" for="setting-1">American</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-2" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-liam-neeson"> 
+                                        <label class="form-check-label text-tit" for="setting-2">Decimal</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-3" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-3">Fractional</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-4" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-4">Hong Kong</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-5" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-5">Indonesian</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-6" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-6">Malay</label> 
+                                    </div>
+                                </div>
+                                <div>
+                                    <p class="font-bold">ODDS CHANGING:</p>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-7" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-7">Accept all odds changes</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-8" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-8">Accept increased odds</label> 
+                                    </div>
+                                    <div class="form-check mt-4"> 
+                                        <input id="setting-9" class="form-check-input" type="radio" name="vertical_radio_button" value="vertical-radio-daniel-craig"> 
+                                        <label class="form-check-label text-tit" for="setting-9">Always ask</label> 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex gap-4 mt-5">
+                                <button class="w-1/2 h-10 bg-backlight rounded">CANCEL</button>
+                                <button class="w-1/2 h-10 btn-green">SAVE</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--  ** 모달영역 끝 ** -->
 
