--- a/lottery.html
+++ b/lottery.html
@@ -102,7 +102,7 @@
                     <div class="px-4">
                         <div class="font-bold text-tit">A</div>
                         <div class="my-4">
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Arizona Triple Twist 6/42</div>
@@ -113,7 +113,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">All or Nothing Morning Texas 12/24</div>
@@ -124,7 +124,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/Australia.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Australia Powerball 7/35</div>
@@ -135,7 +135,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/Australia.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Australia Powerball 7/35</div>
@@ -146,7 +146,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Arizona Triple Twist 6/42</div>
@@ -157,7 +157,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">All or Nothing Morning Texas 12/24</div>
@@ -172,7 +172,7 @@
 
                         <div class="font-bold text-tit">B</div>
                         <div class="my-4">
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Arizona Triple Twist 6/42</div>
@@ -183,7 +183,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">All or Nothing Morning Texas 12/24</div>
@@ -194,7 +194,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/Australia.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Australia Powerball 7/35</div>
@@ -205,7 +205,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/Australia.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Australia Powerball 7/35</div>
@@ -216,7 +216,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Arizona Triple Twist 6/42</div>
@@ -227,7 +227,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">All or Nothing Morning Texas 12/24</div>
@@ -242,7 +242,7 @@
 
                         <div class="font-bold text-tit">C</div>
                         <div class="my-4">
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Arizona Triple Twist 6/42</div>
@@ -253,7 +253,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">All or Nothing Morning Texas 12/24</div>
@@ -264,7 +264,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/Australia.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Australia Powerball 7/35</div>
@@ -275,7 +275,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/Australia.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Australia Powerball 7/35</div>
@@ -286,7 +286,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">Arizona Triple Twist 6/42</div>
@@ -297,7 +297,7 @@
                                     <img class="w-5 h-5" src="/bcGame/dist/custom_img/lottery/like_done.svg" alt="">
                                 </button>
                             </div>
-                            <div class="flex items-center justify-between gap-3 py-4">
+                            <div class="flex items-center justify-between gap-3 py-4 cursor-pointer hover:bg-back px-2">
                                 <div class="shrink-0"><img class="w-6 h-6" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
                                 <div class="w-[68%]">
                                     <div class="truncate text-tit font-medium">All or Nothing Morning Texas 12/24</div>
@@ -312,9 +312,12 @@
                     </div>
                 </div>
 
+                <!-- 베팅슬립 모바일 -->
+                <button id="betSlip_btn"><img class="mx-auto" src="/bcGame/dist/custom_img/lottery/bet-icon.png" alt=""></button>
+                
                 <!-- 배팅슬립 -->
                 <div class="batting_slip">
-                    <div class="top_box flex items-center justify-between bg-primary px-5 w-[350px] h-14 rounded-t cursor-pointer">
+                    <div class="top_box flex items-center justify-between bg-primary px-5 w-full md:w-[350px] h-14 rounded-t cursor-pointer">
                         <div class="flex items-center gap-2">
                             <img class="" src="/bcGame/dist/custom_img/lottery/bet-icon.png" alt="">
                             <p class="text-white text-base font-bold">배팅 슬립</p>
@@ -387,7 +390,7 @@
                                     <div class="flex items-center gap-1 my-3 text-tit">
                                         <p class="w-1/3 text-tit font-bold text-center bg-slate-200 bg-opacity-90 rounded">00h</p> : <p class="w-1/3 text-tit font-bold text-center bg-slate-200 bg-opacity-90 rounded">03m</p> : <p class="w-1/3 text-tit font-bold text-center bg-slate-200 bg-opacity-90 rounded">07s</p>
                                     </div>
-                                    <button class="btn-green w-full h-9 font-extrabold text-tit rounded">지금 베팅</button>
+                                    <button class="btn-green w-full h-9 font-extrabold text-tit rounded">Closed</button>
                                 </li>
                                 <li class="relative swiper-slide flex flex-col justify-between !h-56 p-4 bg-back2 rounded overflow-hidden">
                                     <div class="absolute -right-4 -top-4 w-20 h-20 bg-back2 p-1.5 rounded-full"><img class="w-full h-full" src="/bcGame/dist/custom_img/lottery/USA.webp" alt=""></div>
@@ -1250,6 +1253,11 @@
         // 배팅슬립
         $('.batting_slip .top_box').on('click',function(){
             $(this).parent().toggleClass('on')
+        })
+
+        // 배팅슬립 모바일
+        $('#betSlip_btn').on('click',function(){
+            $('.batting_slip').toggleClass('on')
         })
 
 
