너비수정 > 큰화면에서

--- a/_top_bar_logout.html
+++ b/_top_bar_logout.html
@@ -5,10 +5,10 @@
           <a class="block px-4 py-2" href="javascript:;"><img class="w-6" src="/bcGame/dist/custom_img/logo_small.webp" alt=""></a>
       </div>
       <div class="left flex">
-          <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</button>
-          <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</button>
-          <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</button>
-          <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic lottery_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Lottery"></use></svg> 복권</button>
+        <a id="top_casino" href="/bcGame/casino/index.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</a>
+        <a id="top_sports" href="/bcGame/sports.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</a>
+        <a id="top_racing" href="/bcGame/racing.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</a>
+        <a id="top_lottery" href="/bcGame/lottery.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic lottery_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Lottery"></use></svg> 복권</a>
       </div>
       <div class="right flex items-center">
           
